# online-courses

./: README.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CS Center Programming on C++/Pointers/: CMakeLists.txt  pointer1.cpp  pointer2.cpp
CS Center Programming on C++/Pointers2/: CMakeLists.txt
CodeSignal/: Edge of the Ocean.ipynb
Coursera C++ White Belt/Week 1/: Binary numbers.cpp  Cost.cpp  Division.cpp  Equation.cpp  Even Numbers.cpp  GCD.cpp  Minimal Line.cpp  Second Appearence.cpp
Coursera C++ Yellow Belt/Week 1/: CMakeLists.txt  block_weights.cpp  meantemp.cpp  regiondatabase.cpp  teamstasksclass.cpp
Coursera Data Analysis and Machine Learning/: Week 2 Problem 1 - CAT.ipynb
Coursera Data Analysis and Machine Learning/Supervised Learning/: Readme.md
Coursera Data Analysis and Machine Learning/Week 2/: Week 2 Problem 1 - CAT.ipynb
Deep Learning School/: Week 2 - Homework- Numpy.ipynb  [homework]numpy.ipynb
Deep Learning School/.ipynb_checkpoints/: Week 2 - Homework- Numpy-checkpoint.ipynb  [homework]numpy-checkpoint.ipynb
Hackerrank C++/Classes/: CMakeLists.txt  class.cpp  struct.cpp  (+1 more)
Hackerrank Python/: findingthepercent.py  ifelsestatement.py  listcomprehension.py  printfunction.py  runnerupscore.py  writeafunction.py
Stepik/: Week 2.ipynb  Week 3.ipynb  dataset_3363_3.txt  dataset_3363_4.txt  dataset_3378_2.txt  out.txt  text.txt
Stepik Math Practice on Python/: 100_Numpy_exercises.ipynb  Math Practice.ipynb
Stepik Programming on Python/: Week 1.ipynb
Stepik Python Course/: Stepik - Programming on Python - Problems.ipynb
(+97 files in other folders)
