cmake_minimum_required(VERSION 3.15)
project(Coursera_C___Yellow_Belt)

set(CMAKE_CXX_STANDARD 17)

add_executable(main.cpp main.cpp)
add_executable(matrixclass.cpp matrixclass.cpp)
add_executable(meantemp.cpp meantemp.cpp)
add_executable(block_weights.cpp block_weights.cpp)
add_executable(reigiondatabase.cpp reigiondatabase.cpp)